perf: optimize DOM rendering and prevent flicker

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,12 @@
 :root {
-  --color-theme-background: #1a170f;
-  --color-theme-foreground: #eceae5;
-  --color-theme-accent: #eec35e;
-  --color-theme-tag: #eec35e;
-  --color-theme-title: #eec35e;
-  --color-theme-link: #eec35e;
-  --color-theme-meta: #eceae5;
-  --color-theme-framed: #eec35e;
+  --color-theme-background: ;
+  --color-theme-foreground: ;
+  --color-theme-accent: ;
+  --color-theme-tag: ;
+  --color-theme-title: ;
+  --color-theme-link: ;
+  --color-theme-meta: ;
+  --color-theme-framed: ;
   --list-marker: "-";
   --font-size: 1rem;
   --line-height: 1.54em;
